[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.20.11"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vaultie/teddybear"
categories = ["cryptography", "wasm"]

[workspace.dependencies]
ssi-claims = { git = "https://github.com/spruceid/ssi", default-features = false, features = ["ed25519", "w3c"] }
ssi-dids-core = { git = "https://github.com/spruceid/ssi", default-features = false }
ssi-json-ld = { git = "https://github.com/spruceid/ssi", default-features = false }
ssi-jwk = { git = "https://github.com/spruceid/ssi", default-features = false, features = ["ed25519", "secp256r1"] }
ssi-jws = { git = "https://github.com/spruceid/ssi", default-features = false, features = ["ed25519"] }
ssi-jwt = { git = "https://github.com/spruceid/ssi", default-features = false }
ssi-multicodec = { git = "https://github.com/spruceid/ssi", default-features = false }
ssi-rdf = { git = "https://github.com/spruceid/ssi", default-features = false }
ssi-security = { git = "https://github.com/spruceid/ssi", default-features = false }
ssi-sd-jwt = { git = "https://github.com/spruceid/ssi", default-features = false }
ssi-vc = { git = "https://github.com/spruceid/ssi", default-features = false }
ssi-verification-methods = { git = "https://github.com/spruceid/ssi", default-features = false, features = ["ed25519", "secp256r1"] }

did-web = { git = "https://github.com/spruceid/ssi", default-features = false }

anyhow = "1.0.93"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.0", features = ["pkcs8"] }
iref = "3.1.4"
itertools = "0.13.0"
multibase = { version = "0.9.1", default-features = false }
p256 = "0.13.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
static-iref = "3.0.0"
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["wasm-bindgen"] }
tokio = { version = "1.35.1", features = ["macros"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

teddybear-c2pa.path = "crates/teddybear-c2pa"
teddybear-crypto.path = "crates/teddybear-crypto"
teddybear-did-key.path = "crates/teddybear-did-key"
teddybear-high-assurance.path = "crates/teddybear-high-assurance"
teddybear-jwe.path = "crates/teddybear-jwe"
teddybear-mdoc.path = "crates/teddybear-mdoc"
teddybear-sd-jwt.path = "crates/teddybear-sd-jwt"
teddybear-vc.path = "crates/teddybear-vc"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
# Debug symbols are used to snip unused code snippets
# strip = true
