[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.22.6"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vaultie/teddybear"
categories = ["cryptography", "wasm"]

[workspace.dependencies]
itertools = "0.14.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.111"
thiserror = "2.0.17"
tsify = { version = "0.5.5", features = ["js"] }
wasm-bindgen = "=0.2.100"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
# Debug symbols are used to snip unused code snippets
# strip = true
