[package]
name = "teddybear-c2pa"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
toml = "0.9.8"
tsify.workspace = true
wasm-bindgen.workspace = true

[dependencies.c2pa]
version = "0.68.0"
default-features = false
features = ["rust_native_crypto", "pdf"]
