[package]
name = "teddybear-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
ssi-claims = { workspace = true }
ssi-dids-core = { workspace = true }
ssi-jwk = { workspace = true }
ssi-jws = { workspace = true }
ssi-verification-methods = { workspace = true }

ed25519-dalek = { workspace = true }
teddybear-did-key = { workspace = true }
multibase = { workspace = true }
thiserror = { workspace = true }
