[package]
name = "teddybear-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
ssi-dids-core.workspace = true
ssi-jwk.workspace = true
ssi-jws.workspace = true
ssi-multicodec.workspace = true
ssi-security.workspace = true
ssi-verification-methods.workspace = true

did-web.workspace = true

teddybear-did-key.workspace = true
teddybear-high-assurance.workspace = true

ed25519-dalek.workspace = true
getrandom = { version = "0.2.15", features = ["js"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
serde.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
