[package]
name = "teddybear-did-key"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1.74"
ed25519-dalek = { workspace = true }
iref = { workspace = true }
multibase = { workspace = true }
serde_json = { workspace = true }
ssi-dids = { workspace = true }
ssi-jwk = { workspace = true }
static-iref = "2.0.0"
