[package]
name = "teddybear-did-key"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
ssi-dids-core = { workspace = true }

ed25519-dalek = { workspace = true }
iref = { workspace = true }
multibase = { workspace = true }
serde_json = { workspace = true }
static-iref = { workspace = true }
