[package]
name = "teddybear-high-assurance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
hickory-proto = { version = "0.24.1", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
thiserror = { workspace = true }
