[package]
name = "teddybear-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "--enable-bulk-memory",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
    "--enable-simd",
    "-Oz"
]

[dependencies]
teddybear-c2pa = { workspace = true }
teddybear-crypto = { workspace = true }
teddybear-jwe = { workspace = true }
teddybear-vc = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.1"

js-sys = "0.3.68"
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "0.4.41"
