[package]
name = "teddybear-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
teddybear-c2pa.workspace = true
teddybear-crypto.workspace = true
teddybear-jwe.workspace = true
teddybear-mdoc.workspace = true
teddybear-vc.workspace = true

ssi-status.workspace = true

itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6.1"

js-sys = "0.3.68"
wasm-bindgen = "=0.2.95"
wasm-bindgen-futures = "0.4.41"
