[package]
name = "teddybear-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
teddybear-c2pa.path = "../teddybear-c2pa"
teddybear-common.path = "../teddybear-common"
teddybear-w3c.path = "../teddybear-w3c"

futures-util = "0.3.31"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6.1"
thiserror.workspace = true

console_error_panic_hook = "0.1.7"
js-sys = "0.3.68"
tsify.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-derive = "0.3.0"
wasm-bindgen-futures = "0.4.41"
