[package]
name = "teddybear-jwe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
askar-crypto = { version = "0.3.0", default-features = false, features = ["alloc", "aes", "ed25519", "getrandom"] }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssi-jwk = { workspace = true }
