[package]
name = "teddybear-jwe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
askar-crypto = { version = "0.3.0", default-features = false, features = ["aes", "chacha", "ec_curves", "ed25519", "p256", "std"] }
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
ssi-jwk.workspace = true

p256.workspace = true
x25519-dalek.workspace = true

[dev-dependencies]
paste = "1.0.14"
teddybear-crypto.workspace = true
tokio = { workspace = true, features = ["test-util"] }
