[package]
name = "teddybear-mdoc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
ciborium = "0.2.2"
isomdl = { git = "https://github.com/vaultie/isomdl", branch = "upstreaming" }
p256.workspace = true
serde.workspace = true
teddybear-crypto.workspace = true
thiserror.workspace = true
time.workspace = true
