[package]
name = "teddybear-sd-jwt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
json-syntax = "0.12.5"
ssi-jwk.workspace = true
ssi-jws.workspace = true
ssi-jwt.workspace = true
ssi-sd-jwt.workspace = true

serde.workspace = true
thiserror.workspace = true
