[package]
name = "teddybear-vc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
ssi-claims = { workspace = true }
ssi-crypto = { workspace = true }
ssi-dids-core = { workspace = true }
ssi-json-ld = { workspace = true }
ssi-vc = { workspace = true }
ssi-verification-methods = { workspace = true }

itertools = { workspace = true }
serde = { workspace = true }
teddybear-crypto = { workspace = true }
thiserror = { workspace = true }
